--- a/mizutani_soturon.tex
+++ b/mizutani_soturon.tex
@@ -63,14 +63,20 @@
 
 \section{研究背景}
 
+あるグラフ$G=(V,E)$が与えられたとき,グラフを非連結な二つの頂点集合に分割する小さな"セパレータ"の存在について考えられることがある.このセパレータの存在は,高速なグラフアルゴリズム設計において非常に重要である.
+しかし,一般のグラフに対して最小サイズのセパレータを求める問題はNP困難である.\par
+現在,一般のグラフに対して小さなセパレータを近似する集中型のアルゴリズムはいくつか知られているが,分散環境におけるアルゴリズムはまだあまり知られていない.この論文では,既存の近似アルゴリズムをベースとする分散セパレータ近似アルゴリズムを提示する.
+
+\section{研究結果}
+この論文の主な結果は,CONGESTモデルにおいて$\tilde{O}()$ラウンドで
+
 \section{関連研究}
-test
 
 \section{論文の構成}
-test
+
 
 \chapter{諸定義}
-test
+
 
 \chapter{既存手法の説明}
 test
