--- a/mizutani_soturon.tex
+++ b/mizutani_soturon.tex
@@ -68,14 +68,45 @@
 現在,一般のグラフに対して小さなセパレータを近似する集中型のアルゴリズムはいくつか知られているが,分散環境におけるアルゴリズムはまだあまり知られていない.この論文では,既存の近似アルゴリズムをベースとする分散セパレータ近似アルゴリズムを提示する.
 
 \section{研究結果}
-この論文の主な結果は,CONGESTモデルにおいて$\tilde{O}()$ラウンドで
 
 \section{関連研究}
 
 \section{論文の構成}
 
+\chapter{準備}
+\section{分散モデル}
+アルゴリズムは分散システムにおけるCONGESTモデルの下で動作する.$n$個の計算機ノード集合$V$と通信リンクの集合$E$である無向ネットワークグラフ$G=(V,E)$があるとする.CONGESTモデルにおいて計算機はラウンドに従って同期して動作を行う.各ラウンドにおいてノードは最大$O(\log n)$ビットのメッセージを各隣接ノードに送信,各隣接ノードからメッセージの受信,無制限の内部計算を行う事が出来る.\\
+分散設定では,ノードは一意なID($O\log n$ビット)を持っており,隣接ノードの$ID$は知っているものとする.\par
+グラフ$G=(V,E)$に対して,$D$はその直径を表すとする.頂点$s,t\in V$に対して,$s$と$t$を結ぶ経路をs-tパスと呼ぶ.特に,いくつかのs-tパスに対して,それぞれのパスが同じ頂点を共有しないとき,これらをs-t点素パスと呼ぶ.また,$s$と$t$の間にパスが存在しなくなるように取り除かれた頂点集合をカットと呼ぶ.
 
-\chapter{諸定義}
+
+\section{Subgraph Aggregation}
+GhaffariとHaeuplerのショートカットフレームワークは,制限されたグラ
+フ族の分散アルゴリズムを設計する上で有益であることが証明されて
+いる.さらに,このショートカットフレームワークの制約をさらに弱めて改良されたタスクがJasonによって示されている.
+この論文では,このショートカットのフレームワークの内部動作には触れずにSubgraph Aggregationとして定義されているタスクを利用する.
+
+\begin{definition}[Subgraph Aggregation]
+    $G=(V,E)$をネットワークグラフとし,$\mathcal{P} =(P_1,...P_{|\mathcal{P}|})$をパートの集合,各$P_i$について$H_i$を$P_i$のノード上のGの連結部分グラフとする.必ずしもグラフ$G[P_i]$から誘導されるとは限らない.各部分グラフ$H_i$について、$V(H_i)$内のすべてのノードが部分グラフ$H_i$内の隣接ノードを認識し、それ以外は何も知らないと仮定する.すべてのノード$v\in \bigcup_iP_i$がO(log n)ビットの整数$x_v$を持ち,$\oplus$を長さO（log n）の整数に作用する結合関数とする.$P_i$内の各ノードは値$\bigoplus_{v\in P_i}x_v$、すなわち$P_i$内のすべての値$x_v$の集合$\oplus$を知りたいとする.このようなタスクをオペレーター$\oplus$におけるSubgraph Aggregationと呼ぶ.
+\end{definition}
+
+SAラウンドを,Subgraph Aggregation（SA）において各パートがその収集値$\bigoplus$を学習する一回の反復とする.また,SAは特別なグラフ構造に対して以下の定理が成り立つ.
+
+\begin{theorem}
+    結合演算子$\oplus$について、$Q_G$がグラフ$G$とその直径$D$に依存するパラメータである場合,$\tilde{O}(Q_G)$ラウンドでSubgraph Aggregation問題を解くことができる.
+    \item 全てのグラフ$G:Q_G = O(\sqrt{n}+D)$
+    \item 種数$g$のグラフ$G:Q_G=O(\sqrt{g+1}D)$
+    \item 木幅$k$のグラフ$G:Q_G=\tilde{O}(kD)$
+    \item $H$をマイナーとして含まないグラフ$G:Q_G=\tilde{O}(f(H)\cdot D^2)$,$f$は$H$にのみ依存する関数
+\end{theorem}
+
+\section{s-t点素パス}
+グラフプロパティの一種である木幅と呼ばれる値$k$に対して以下の補題が示されている.
+
+\begin{lemma}
+    木幅が高々$k$のグラフ$G=(V,E)$と二つの頂点$s,t\subseteq V$を与えると,$k$点素s-tパスを見つけるか,サイズ$k$以下のs-tノードカットを$\tilde{O}(k^{O(1)}D)$ラウンドで出力することができる.前者の場合,各ノードは自身がパス上にあるかどうかを知っており、そうであれば、そのパス上のその前方と後方を知る.後者の場合、$k$点素パスが存在しないという事実と,カットに含まれるかどうかを各ノードが知っている.
+\end{lemma}
+
 
 
 \chapter{既存手法の説明}
