--- a/mizutani_soturon.tex
+++ b/mizutani_soturon.tex
@@ -12,6 +12,7 @@
 %\usepackage{url}				% 参考文献中のURL表記
 \usepackage{algorithm}			% アルゴリズム環境
 \usepackage{algpseudocode}      %アルゴリズム環境
+%\usepackage[noend]{algpseudocode}  %ループやifのendがいらない時
 \usepackage{listings}  			%アルゴリズム環境
 \usepackage{comment}			% コメントアウト環境
 \usepackage{bm}	%太字形式のベクトル
