--- a/algorithm/alg2and3.tex
+++ b/algorithm/alg2and3.tex
@@ -17,6 +17,16 @@
 \usepackage{here}               % 定理環境
 \usepackage{citesort}
 
+% 定理環境
+\usepackage{amsthm}
+\theoremstyle{definition}
+\newtheorem{theorem}{定理}
+\newtheorem{lemma}{補題}
+\newtheorem{definition}{定義}
+\newtheorem*{definition*}{定義}
+\newtheorem{fact}{事実}
+\newtheorem{corollary}{系}
+
 % 先生コメント用
 \usepackage[normalem]{ulem}
 \usepackage{color}
