--- a/algorithm/alg1.tex
+++ b/algorithm/alg1.tex
@@ -104,7 +104,7 @@ $O(kn)$ラウンドで実行可能（？）
 \section*{分散案}
 \begin{enumerate}
   \item 点素パス上の各頂点が隣接頂点にパス上のインデックスをブロードキャスト
-  \item 各点素パスの頂点を含まない$G$の連結成分内(仮$C$)で,受け取ったパスのインデックスの最大値最小値を収集(2kSAラウンド)
+  \item 各点素パスの頂点を含まない$G$の各連結成分内(仮$C$)で,受け取ったパスのインデックスの最大値最小値を収集(2kSAラウンド)
   \item スライス$U$のインデックスを各点素パス上のノードが知る(kSAラウンド)
   \item パス上の各頂点がスライス$U$のインデックスを隣接頂点にブロードキャスト(kラウンド)
   \item 各$C$内の頂点が点素パスの情報を2つ以上知っているとき
@@ -118,6 +118,5 @@ $O(kn)$ラウンドで実行可能（？）
   \item 最小値が$x_i$より小さい$C$を$X$に追加
   \item 最大値収集,$w_i$を更新
 \end{enumerate}
-$\ell k$SAラウンド
-
+$\ell k$SAラウンド 
 \end{document}
