--- a/mizutani_soturon.tex
+++ b/mizutani_soturon.tex
@@ -47,7 +47,7 @@
 
 % タイトル
 \gradyear{30}
-\papertitle{タイトル}
+\papertitle{平衡分離集合を近似する分散アルゴリズム}
 \IDNumber{26115142}
 \department{情報工学科}
 \labo{泉研究室}
