--- a/mizutani_references.bib
+++ b/mizutani_references.bib
@@ -31,3 +31,14 @@
   journal={arXiv preprint arXiv:1805.10708},
   year={2018}
 }
+
+@article{bui1992finding,
+  title={Finding good approximate vertex and edge partitions is NP-hard},
+  author={Bui, Thang Nguyen and Jones, Curt},
+  journal={Information Processing Letters},
+  volume={42},
+  number={3},
+  pages={153--159},
+  year={1992},
+  publisher={Elsevier}
+}
