--- a/mizutani_soturon.tex
+++ b/mizutani_soturon.tex
@@ -1,4 +1,3 @@
-
 \documentclass{thesis}
 
 \bibliographystyle{unsrt}
@@ -48,7 +47,7 @@
 
 % タイトル
 \gradyear{30}
-\papertitle{平衡分離集合を近似する\\分散アルゴリズム}
+\papertitle{タイトル}
 \IDNumber{26115142}
 \department{情報工学科}
 \labo{泉研究室}
@@ -68,152 +67,121 @@
 
 \chapter{はじめに}
 
-ある$n$頂点のグラフ$G=(V,E)$が与えられたとき,頂点の部分集合$S \subset V$が，
-それを取り除くとグラフが非連結な二つ以上の部分グラフに分けられるとき，
-その頂点集合$S$は$G$の分離集合と呼ぶ．特に，$S$を取り除いた後におけるグラフの各連結成分が
-いずれも高々$\alpha n$個の頂点しか含まないとき$S$をグラフ$G$の$\alpha$-平衡分離集合と呼ぶ．
-$\alpha$が定数（$\alpha = \Theta(1)$）であるようなサイズの小さい分離集合を発見できるとき，
-元のグラフ$G$に対する何らかの問題を，分離後の$\alpha n$頂点サイズのグラフにおける問題に
-分割統治法を用いて帰着できる場合がしばしば存在する．実際に，平面的グラフのような，
-小さい平衡分離集合をもつグラフクラスに対して，そのような手法で高速なグラフアルゴリズムが
-設計可能である．一般のグラフに対して，最小サイズの$\alpha$-平衡分離集合を求める問題は
-NP困難であることが知られているが~\cite{bui1992finding}，いくつかの近似アルゴリズムの存在が知られており，現時点では近似率$O(\log n)$のアルゴリズムが存在する~\cite{}．
+\section{研究背景}
 
-本研究では，特に分散システム上の平衡分離集合発見問題を考える．すなわち，ネットワークの
-トポロジを問題の入力とみなし，その上での小さい平衡分離集合を発見するアルゴリズムを考える．
-分散システムのモデルとしては，単位時間当たりに1通信リンクあたりに伝送可能な情報量を
-$O(\log n)$ビットに制限した\textit{CONGEST}モデルを考える．同モデルに
-おいては通信リンクの帯域が制限されているため，ある１台の計算機がネットワーク全体の
-トポロジ情報を収集して，その上で逐次アルゴリズムを実行するというアプローチでは最悪時に
-$\Omega(m)$ラウンド($m$はグラフの辺数)の実行時間を必要とする．本研究での提案アルゴリズムの
-基本アイデアは，BrandtとWattenhoferらによる，一般のグラフに対する平衡分離集合計算の
-ための近似アルゴリズム\cite{brandt2017approximating}を分散システム上に実現することである．同アルゴリズムはサイズ$K$の$\alpha$-平衡分離集合を持つような入力インスタンスに対して，
-サイズ$O(\varepsilon^{-1}K^2\log^{1+o(1)}n)$の $(\alpha + \varepsilon)$-平衡分離集合を計算する．提案アルゴリズムは，この
-アルゴリズムと同等の近似性能を持つ解を$\tilde{O}(\varepsilon^{-1}K^3(K^{O(1)}+\ell)(\sqrt{n}+D))$ラウンド\Izumi{(で合ってる？)}で出力する．
-\Izumi{XXXXXXXXXのところは適切に埋める．}．平衡分離集合を近似的に計算する
-\textit{CONGEST}モデル上の分散アルゴリズムはこれまでに知られておらず，提案手法は
-非自明な計算時間上界を持つ初めてのアルゴリズムである．
+あるグラフ$G=(V,E)$が与えられたとき,グラフを非連結な二つの頂点集合に分割する小さな"セパレータ"の存在について考えられることがある.このセパレータの存在は,高速なグラフアルゴリズム設計において非常に重要である.
+しかし,一般のグラフに対して最小サイズのセパレータを求める問題はNP困難であるため,小さなセパレータを求める近似アルゴリズムがこれまで研究されている.\par
+現在,一般のグラフに対して小さなセパレータを近似する集中型のアルゴリズムはいくつか知られているが,分散環境におけるアルゴリズムはまだあまり知られていない.この論文では,BrandtとWattenhoferの近似アルゴリズム\cite{brandt2017approximating}をベースとする分散セパレータ近似アルゴリズムを提示する.
 
 \section{論文構成}
-本論文は全5章で構成される.2章ではアルゴリズムのために必要な諸定義や補題等の準備を行う．
-3章では既存の集中型でのアルゴリズムの概要を説明し，4章では提案する分散アルゴリズムの説明を
-行う.5章で研究のまとめを記述する.
+本論文は全5章で構成される.2章ではアルゴリズムのために必要な諸定義や補題等の準備.3章では既存の集中型でのアルゴリズムの概要説明.4章では分散セパレータ近似アルゴリズムの提示.5章で研究のまとめを記述する.
 
 \chapter{準備}
+アルゴリズムは分散システムにおけるCONGESTモデルの下で動作する.$n$個の計算機ノード集合$V$と通信リンクの集合$E$である無向ネットワークグラフ$G=(V,E)$があるとする.CONGESTモデルにおいて計算機はラウンドに従って同期して動作を行う.各ラウンドにおいてノードは最大$O(\log n)$ビットのメッセージを各隣接ノードに送信,各隣接ノードからメッセージの受信,無制限の内部計算を行う事が出来る.\\
+分散設定では,ノードは一意なID($O(\log n)$ビット)を持っており,隣接ノードのIDは知っているものとする.\par
 
-\section{分散システム}
+グラフ$G=(V,E)$に対して,$D$はその直径を表すとする.頂点$s,t\in V$に対して,$s$と$t$を結ぶ経路をs-tパスと呼ぶ.特に,いくつかのs-tパスに対して,それぞれのパスが同じ頂点を共有しないとき,これらをs-t点素パスと呼ぶ.また,$s$と$t$の間にパスが存在しなくなるように取り除かれた頂点集合をs-tカットと呼ぶ.\par
 
-\subsection{\textit{CONGEST}モデル}
-本稿で考える分散システム(\textit{CONGEST}モデル)は，単純無向連結グラフ$G=(V,E)$により
-表現される．ここで$V$はノードの集合であり，$E$は通信リンクの集合である．また，$|V|=n$とする．
-\textit{CONGEST}モデルでは計算機はラウンドに従って同期して動作するものとする．1ラウンド内で，隣接頂点へのメッセージ送信，隣接頂点からのメッセージ受信，内部計算(多項式時間)をおこなう．各辺は単位ラウンドあたり$O(\log n)$ビットを双方向に伝送可能であり，各ノードは異なる接続辺に
-異なる内容のメッセージを同一ラウンドに送信可能である．各ノードはまた，$O(\log n)$ビットの
-自然数値よるIDが付与されており，自身の隣接頂点全てのIDを既知であるとする．各ノードは
-グラフのトポロジに関する事前知識を持たないものとする．なお，本稿を通じて，$G$の直径を$D$で
-表すこととする．
+s-t点素パスとカットについて以下の定理が示されている.
 
-\subsection{同時部分収集問題}
-本研究で検討される分散アルゴリズムの動作は，同時部分収集問題（Subgraph Aggregation: SA）と
-呼ばれる抽象化された集合通信操作をプリミティブとして設計されている．同時部分収集問題は
-GhaffariとHaeuplerらによる低競合ショートカット\cite{ghaffari2016distributed}の枠組みにおいて初めて提案されており．具体的には以下のような問題として定義される．
-\begin{definition}[Subgraph Aggregation\cite{li2018distributed}\cite{haeupler2018round}]
-    $G=(V,E)$をネットワークとし,$\mathcal{P} =(P_1,...P_{|\mathcal{P}|})$を$G$の連結な部分グラフの集合(パートと呼ぶ)とする．ただし各パートの頂点集合は互いに素であるとする．各$P_i$について、そこに含まれるノード$v \in V(P_i)$は自身および自身の隣接ノードがどのパートに属しているかは既知であるとする．すべてのノード$v　\in \bigcup_i P_i$が$O(log n)$
-    ビットの値$x_v \in X$を持つとし，$\oplus$を$X$上の可換かつ結合的な任意の2項演算とする．演算$\oplus$に対する同時部分収集問題は，$P_i$内の各ノードに値$\bigoplus_{v\in P_i}x_v$、すなわち$P_i$内のすべての値$x_v$に対する($\oplus$の下での)和を通知する問題と
-    定義される．
-\end{definition}
-
-本稿を通じて，分散アルゴリズムの実行時間評価を，そのアルゴリズムが駆動するSAの回数
-(SAラウンド)により評価することとする．SAの1回の実行に必要な(通常の意味での)ラウンド数は
-一般のグラフに関しては$O(\sqrt{n} + D)$ラウンドであり，この実行時間はタイトである．
-すなわち，SAラウンド数$s(n)$の分散アルゴリズムは，自動的にラウンド数
-$O(s(n)(\sqrt{n} + D))$の分散アルゴリズムを与える．一方で，いくつかの特殊なグラフクラスを
-仮定した場合，より少ないラウンド数でSAを実現するアルゴリズムが構成可能であることが
-知られている．具体的には，以下の定理が存在する．
-\begin{theorem}[Ghaffari and Haeupler-\cite{ghaffari2016distributed}, Haeupler et al.~\cite{HIZ16}, Li et al.\cite{}, Kitagawa et al.~\cite{}] \label{SA}
-    可換かつ結合的な任意の演算子$\oplus$について、各グラフクラスに対して以下に示す
-    ラウンド数でSAを実現するアルゴリズムが存在する．
-    \item 一般のグラフ：$O(\sqrt{n} + D)$ラウンド，
-    \item 種数$g$のグラフ：$O(\sqrt{g+1}D)$ラウンド，
-    \item 木幅$k$のグラフ：$\tilde{O}(kD)$ラウンド，
-    \item $k$-コーダルグラフ：$O(kD)$ラウンド，
-    \item グラフ$H$をマイナーとして含まないグラフ：$\tilde{O}(f(H)\cdot D^2)$ラウンド．
-    ここで$f$は$H$の大きさにのみ依存する関数．
+\begin{theorem}[メンガーの定理]
+    グラフ$G$に対して,$s,t$のカットの最小値はs-t点素パスの最大本数と等しい
 \end{theorem}
-本稿で提案するアルゴリズムは，これらのグラフクラスに対して，それに対応する
-SAの実現ラウンド数に応じた実行時間で動作することが保証される．
 
-\section{$\alpha$-平衡分離集合問題}
-頂点集合$V$の分割$(A,S,B):V=A \cup S \cup B$について,集合$A,B$間に辺が存在しないとき,集合$S$を$G$の分離集合と呼ぶ.$0 < \alpha < 1$とし,上記の分割$(A,S,B)$に対して$|A|,|B|\leq \alpha|V|$の時,$S$を$\alpha$-平衡分離集合と呼ぶ．また，
-$V$中の頂点$s$，$t$が与えられたとき，$s \in A$，$t \in B$であるような分離集合$S$を，
-$G$の$s$-$t$点カットと呼ぶ．
+s-t点素パスの最大本数について考える.メンガーの定理によって各点素パスから頂点を一個づつ適切に取り出すと,その頂点集合はグラフ$G$の最小s-tカットになる.もちろん,任意に各パスから頂点を取り出すとs-tカットにならない場合もある.この各パスから任意に取り出した頂点集合を特にスライスと呼び,以下のように定義する.
 
-$s$-$t$点カットを取り除くことでは$G$を少なくとも2つの連結成分に分離する.
-$U$を任意の$s$-$t$点カットとするとき，$V \setminus U$により誘導される部分グラフにおいて
-$s$，$t$を含む連結成分の頂点集合をそれぞれ$V_s(U)$，$V_t(U)$とする．また，$V_r(U)$をそれ以外の連結成分すべてからなる部分グラフと定義する．なお，$V_r(u)$は空グラフとなる場合もあり得る．
-
-\section{$s$-$t$点素パスとメンガーの定理}
-
-$s, t \in V$が与えられたとき，$s$と$t$を結ぶパスで，
-$s$, $t$以外に互いに頂点を共有していないパスの集合$P$を$s$-$t$点素パスと呼ぶ．
-$s$-$t$点素パスと分離集合($s$-$t$点カット)について，以下の定理がよく知られている．
-
-\begin{theorem}[メンガーの定理] \label{menger}
-グラフ$G$に対して,最小サイズの$s$-$t$点カットにおける頂点数と，$s$-$t$点素パスの
-最大本数は等しい．
-\end{theorem}
-与えられた$s$-$t$点素パス集合に対して，スライスと呼ばれる概念を定義する．
 \begin{definition}
-    $G$をグラフとし,$s,t\in V$とする.$\{f_1, \dots ,f_k\}$を$G$における$s$-$t$点素パス
-    集合とする.この時,すべての$1\leq i\leq k$に対して,$w_i \in f_i$、$s \neq wi \neq t$であるような頂点列$(w_1, \dots ,w_i)$を,$(f_1, \dots ,f_k)$に関してのスライスと呼ぶ.
-    XをVの任意の部分集合とし、$s,t \notin X$とする。$G[V\setminus X]$にs-tパスがない場合,$X$は$s$と$t$を分離すると言う。$s$と$t$を分離するスライスをカットと呼ぶ.
+    $G$をグラフとし,$s,t\in V$とする.$\{f_1, \dots ,f_k\}$を$G$における点素s-tパスの集合とする.
+    この時,すべての$1\leq i\leq k$に対して,$w_i \in f_i$、$s \neq wi \neq t$であれば,$(f_1, \dots ,f_k)$に関してタプル$(w_1, \dots ,w_i)$をスライスと呼ぶ.
+    XをVの任意の部分集合とし、$s,t \notin X$とする。$G[V\backslash X]$にs-tパスがない場合,$X$は$s$と$t$を分離すると言う。$s$と$t$を分離するスライスをカットと呼ぶ.
 \end{definition}
 
-定義より明らかに，任意の$s$-$t$点素パス$P$に対して，任意の$s$-$t$カットは$P$中の各パス内の
-頂点を少なくとも一つ含む．すなわち，任意の$s$-$t$カットは$P$のスライスを含む．また，
-メンガーの定理は，最大本数の$s$-$t$点素パス集合を取ったとき，そのスライスで$s$-$t$点素
-カットとなるようなものが存在することを示している．
-$s$-$t$点素パス集合$P$に関するスライスは，$P$中の各パスに対して，その前方側（$s$に近い側）と後方側（$t$に近い側）を自然に定義する．$(f_1, \dots ,f_k)$に関する2つのスライス$U=(u_1, \dots, u_k)$および$W=(w_1, \dots ,w_k)$に対して，すべての$1\leq i\leq k$について、
-$u_i$が$f_i$における$w_i$の前方に存在するか，または$u_i=w_i$が成立するとき，$U$は$W$より
-$s$に近いと言い，$U\preceq W$と記述する．任意の$i$（$1 \leq i \leq k$）に対して,さらに$u_i \neq w_i$ならば,$U$は$W$より厳密に$s$に近いと言い，$U \prec W$と記述する．
-\Izumi{このあたり，図解を入れては？}
+スライスの集合は,$s$に対する相対的な"近さ"によって部分的に並べることができる.あるs-t点素パスの頂点について$s$方向を前方,$t$方向を後方として向きと順序を定義する.
+
+\begin{definition}
+    $\{f_1, \dots ,f_k\}$をs-t点素パスの集合とする.
+    $U=(u_1, \dots, u_k)$および$W=(w_1, \dots ,w_k)$を$(f_1, \dots ,f_k)$に関するスライスとする.すべての$1\leq i\leq k$について、$u_i$は$f_i$における$w_i$の前方または$u_i=w_i$とする.この時$U$は$W$より$s$に近いと言い,$U\preceq W$と書く.$1 \leq i \leq k$に対して,さらに$u_i \neq w_i$ならば,$U$は$W$より厳密に$s$に近いと言い,$U \prec W$と書く.同様に、$W$は$U$より厳密に$t$に近いと言う.便宜上,タプル$(s,s, \dots ,s)$と$(t,t, \dots ,t)$についても同様に上記を定義.したがって,例えば,$(s,s,...s)$はどのスライスよりも$s$に近いと言える.$"\preceq"$は一般的な順序の合計を定義するものではない.
+\end{definition}
+
+カットを取り除くことでは$G$を少なくとも2つの連結成分に分離する.
+あるカットによって分離した各連結成分に対して以下の定義をする.
+
+\begin{definition}
+    $U$を任意のカットとする.$s$を含む$G[V\backslash U]$の連結成分の頂点セットとして$V_s(U)$を定義し,$t$を含む$G [V\backslash U]$の連結成分の頂点セットとして$V_t(U)$を定義し,$V_r$を$G [V \backslash U]$の残りの連結成分の頂点集合の和集合として定義する.すなわち、$V_r(U)$は$ｓ$も$ｔ$も含まない連結成分である.（したがって、$V_r(u)$は空であり得る）
+\end{definition}
+
+\section{セパレータ}
+頂点集合$V$の分割$(A,S,B):V=A \cup S \cup B$について,$|A|\leq \frac{2}{3}|V|$かつ$|B|\leq \frac{2}{3}|V|$であり,集合$A,B$間に辺が存在しないとき,集合$S$を$G$のセパレータと呼ぶ.$\frac{2}{3} \leq \alpha < 1$とし,上記の分割$(A,S,B)$に対して$|A|,|B|\leq \alpha|V|$の時,$S$を$\alpha$-セパレータと呼ぶ.\par
+セパレータ,またはカットはある値$\alpha$に関して,セパレータやカットによって分割された全ての頂点集合のサイズが高々$\alpha |V|$以下である時,セパレータやカットについてバランスが取れていると言うことにする.
+
+\section{Subgraph Aggregation}
+GhaffariとHaeupler\cite{ghaffari2016distributed}のショートカットフレームワークは,制限されたグラフ族の分散アルゴリズムを設計する上で有益であることが証明されて
+いる.さらに,このショートカットフレームワークの制約をさらに弱めて改良されたタスクがLi\cite{li2018distributed}によって示されている.
+この論文では,このショートカットのフレームワークの内部動作には触れずにSubgraph Aggregationとして定義されているタスクを利用する.
+
+\begin{definition}[Subgraph Aggregation\cite{li2018distributed}\cite{haeupler2018round}]
+    $G=(V,E)$をネットワークグラフとし,$\mathcal{P} =(P_1,...P_{|\mathcal{P}|})$をパートの集合,各$P_i$について$H_i$を$P_i$のノード上のGの連結部分グラフとする.必ずしもグラフ$G[P_i]$から誘導されるとは限らない.各部分グラフ$H_i$について、$V(H_i)$内のすべてのノードが部分グラフ$H_i$内の隣接ノードを認識し、それ以外は何も知らないと仮定する.すべてのノード$v\in \bigcup_iP_i$がO(log n)ビットの整数$x_v$を持ち,$\oplus$を長さO（log n）の整数に作用する結合関数とする.$P_i$内の各ノードは値$\bigoplus_{v\in P_i}x_v$、すなわち$P_i$内のすべての値$x_v$の集合$\oplus$を知りたいとする.このようなタスクをオペレーター$\oplus$におけるSubgraph Aggregationと呼ぶ.
+\end{definition}
+
+SAラウンドを,Subgraph Aggregation（SA）において各パートがその収集値$\bigoplus$を学習する一回の反復とする.SAは特別なグラフ構造に関して以下の定理が成り立つ.
+
+\begin{theorem} \label{SA}
+    結合演算子$\oplus$について、$Q_G$がグラフ$G$とその直径$D$に依存するパラメータである場合,$\tilde{O}(Q_G)$ラウンドでSubgraph Aggregation問題を解くことができる.
+    \item 全てのグラフ$G:Q_G = O(\sqrt{n}+D)$
+    \item 種数$g$のグラフ$G:Q_G=O(\sqrt{g+1}D)$
+    \item 木幅$k$のグラフ$G:Q_G=\tilde{O}(kD)$
+    \item $H$をマイナーとして含まないグラフ$G:Q_G=\tilde{O}(f(H)\cdot D^2)$,$f$は$H$にのみ依存する関数
+\end{theorem}
 
 
-本稿では，既存研究~\cite{li2018distributed}で示されている，本数最大の$s$-$t$点素パスを
-発見する分散アルゴリズムをサブルーチンとして利用する．このアルゴリズムの仕様は以下の定理に
-より形式化される．
+\section{s-t点素パス探索アルゴリズム}
+グラフプロパティの一種である木幅と呼ばれる値$k$に対して以下の補題が示されている.
 
 \begin{lemma}[\cite{li2018distributed}] \label{path}
-ネットワーク$G=(V,E)$中の二つの頂点$s,t\subseteq V$，および自然数$k$に対して，
-$k$本の点素$s$-$t$パス，あるいはサイズ$k$未満の$s$-$t$点カットを$\tilde{O}(k^{O(1)})$
-SAラウンドで出力する\textit{CONGESTモデル上の}分散アルゴリズムが存在する.このアルゴリズムは各ノードに，自身が点素パスにあるいは点カットに含まれるかどうかを出力する．また，点素パスが出力される場合，自身を含むパスにおける自身の直前，直後のノードについての情報も併せて出力する．
+    木幅が高々$k$のグラフ$G=(V,E)$と二つの頂点$s,t\subseteq V$を与えると,$k$点素s-tパスを見つけるか,サイズ$k$以下のs-tノードカットを$\tilde{O}(k^{O(1)}D)$ラウンドで出力する分散アルゴリズムが存在する.前者の場合,各ノードは自身がパス上にあるかどうかを知っており、そうであれば、そのパス上のその前方と後方を知る.後者の場合、$k$点素パスが存在しないという事実と,カットに含まれるかどうかを各ノードが知っている.
 \end{lemma}
 
-定理\ref{SA}より一般のグラフにおける以下の系が成り立つ.
+ アルゴリズムの詳細については触れないが,点素パスの探索ステップ自体には木幅の値は関わっていない.木幅が影響するのはSAラウンドに関してのみである.上記の補題と定理\ref{SA}より一般のグラフに置き換えた以下の系が成り立つ.
 
 \begin{corollary}
-    ネットワーク$G=(V,E)$中の二つの頂点$s,t\subseteq V$，および自然数$k$に対して，
-    $k$本の点素$s$-$t$パス，あるいはサイズ$k$未満の$s$-$t$点カットを
-    $\tilde{O}(k^{O(1)}(\sqrt{N} + D))$ラウンドで出力する\textit{CONGESTモデル上の}分散アルゴリズムが存在する.このアルゴリズムは各ノードに，自身が点素パスにあるいは点カットに含まれるかどうかを出力する．また，点素パスが出力される場合，自身を含むパスにおける自身の直前，直後のノードについての情報も併せて出力する．
-    \end{corollary}
+    補題\ref{path}のグラフ$G$を一般のグラフに置き換えると,最大$k$本のs-t点素パスは$\tilde{O}(k^{O(1)}(\sqrt{n}+D))$ラウンドで見つけることができる.終了時,すべての頂点は自身がパス上にあるかどうか,そしてもし存在すればそのパスの前方と後方を知っている.
+\end{corollary}
+
+また,\cite{li2018distributed}では以下の系が示されている.
+
+\begin{corollary}[\cite{li2018distributed}] \label{A-Bpath}
+    木幅$k$のグラフ$G =(V,E)$で,$G[U]$が連結であるような集合$U \subseteq V$およ
+    び3つの互いに素な頂点集合$A,B \subseteq V - U$および$X \subseteq U$を考えると,$\tilde{O}(k^{O(1)}D)$ラウンドで内部ノードが$G[U] - X$に属する$k$個の$A$-$B$点素パスを見つけることができるか,$k$個の点素パスは存在しないと結
+    論付ける.前者の場合,すべての頂点は自身がパス上にあるかどうか,そし
+    てもし存在すればそのパスの前と後を知っています.後者の場合,全ての頂
+    点は,$k$個の点素パスが存在しないという事実を知っている.
+\end{corollary}
+
+この系についても,先程と同様にして以下のように修正する.
+
+\begin{corollary}
+    系\ref{A-Bpath}のグラフを一般のグラフ$G =(V,E)$に置き換える.$G[U]$が連結であるような集合$U \subseteq V$および3つの互いに素な頂点集合$A,B \subseteq V - U$および$X \subseteq U$を考えると,$\tilde{O}(k^{O(1)}(\sqrt{n}+D))$ラウンドで内部ノードが$G[U] - X$に属する最大$k$本の$A$-$B$点素パスを見つけることができる.終了時,すべての頂点は自身がパス上にあるかどうか,そしてもし存在すればそのパスの前方と後方を知っている.
+\end{corollary}
+
 
 \chapter{既存手法の概要}
 
 この章では,BrandtとWattenhoferの近似アルゴリズム\cite{brandt2017approximating}のプロセスを簡略化して説明する.\\
 
-アルゴリズムのアプローチは最大$s$-$t$フローに基づいている.
-小さい平衡分離集合を含むグラフ$G$が与えられ,その分離集合を跨ぐ"異なる側"に頂点$s$と$t$があるとする.この時,定理\ref{menger}より,$s$-$t$点素パスの最大数も少なくなる.\par
-アルゴリズムは$s$-$t$点素パスの最大本数の集合を計算することから始める.
-最大本数$k$本の各パスから１つの頂点を取ることによって,$k$個の$s$-$t$点カットを見つける.これらの頂点は$s$と$t$を分離するように選ぶ必要がある.$s$-$t$カットは,定理\ref{menger}によって存在することは明らかである.\par
+アルゴリズムのアプローチは最大s-tフローに基づいている.
+小さいセパレータを含むグラフ$G$が与えられ,そのセパレータを跨ぐ"異なる側"に頂点$s$と$t$があるとする.この時,メンガーの定理により,s-t点素パスの最大数も少なくなる.\par
+アルゴリズムはs-t点素パスの最大本数の集合を計算することから始める.
+最大本数$k$本の各パスから１つの頂点を取ることによって,$k$個のs-tカットを見つける.これらの頂点はsとtを分離するように選ぶ必要がある.s-tカットは,メンガーの定理によって存在することは明らかである.\par
 
-次に,二分探索法により全てのs-t点カットの中で最良の平衡分離集合の候補である2つのカットを決定する.これら2つのカットのうちの1つが元のグラフに対しても十分に平衡であれば,目的の小さい平衡分離集合が発見できたことになる.そうでないとき,連結成分が2つの$s$-$t$点カットで分断されているされていると見なす.そして,$s$を含む連結成分を新たな頂点$s'$に,$t$を含む成分を新たな頂点$t'$に縮約する.
-新しく得られたグラフのすべての$s'$-$t'$点カットも$G$のs-tカットであり,さらに上記の2つのs-tカットよりも平衡であることが示されている.そのため,本数がある値$K$に等しい$s$-$t$カットを得るまで$s$-$t$点カットをいくつか発見し,頂点集合を縮約する上記のプロセスを繰り返す.\par
+次に,二分探索法により全てのs-tカットの中でバランスがとれた2つのカットを決定する.これら2つのカットのうちの1つが元のグラフに対しても十分にバランスが取れていれば,目的の小さいセパレータが発見できたことになる.バランスが取れていないとき,連結成分が2つのs-tカットで分断されているされていると見なす.そして,$s$を含む連結成分を新たな頂点$s'$に,$t$を含む成分を新たな頂点$t'$に縮約する.
+新しく得られたグラフのすべての$s'$-$t'$頂点カットも$G$のs-tカットであり,さらに上記の2つのs-tカットよりもバランスが取れていることが示されている.そのため,本数がある値$K$に等しいs-tカットを得るまで点素パスを探索し,最良のバランスのとれたs-tカットをいくつか発見し,頂点集合を縮約する上記のプロセスを繰り返す.\par
 
-$\frac{2}{3} \leq \alpha < 1$の時、$s$と$t$を分割するサイズ$K$の$\alpha$-平衡分離集合の存在を考える.上述した反復プロセス終了時,少なくとも$\alpha$-平衡分離集合と同等であるカットを生じない場合,$\alpha$-平衡分離集合の少なくとも１つの頂点が実行された縮約のうちの１つに関与しているとみなす.したがって,プロセス全体を反復することによって,$\alpha$-平衡分離集合を探索する.\\
-ここまで,平衡分離集合の,異なる側にある頂点$s$と$t$を見つけることができると仮定していたが,実際には$s$と$t$を一様ランダムに選択している為,上記の反復プロセスを適用してから得られた最大の連結成分に対して再度縮約アルゴリズムを反復する.\\
-このようにして,与えられたグラフが最小の$\alpha$-平衡分離集合を含んでいれば,小さい近似平衡分離集合を見つけるためのほぼ線形の実行時間を得る.\par
+$\frac{2}{3} \leq \alpha < 1$の時、$s$と$t$を分離する最大で$K$のサイズの$\alpha$-セパレータの存在を考える.上述した反復プロセス終了時,バランスが少なくとも$\alpha$と同等であるカットを生じない場合,$\alpha$-セパレータの少なくとも１つの頂点が実行された縮約のうちの１つに関与しているとみなす.したがって,プロセス全体を反復することによって,セパレータを探索する.\\
+ここまで,セパレータの「異なる側にある」頂点$s$と$t$を見つけることができると仮定していたが,実際には$s$と$t$を一様ランダムに選択している為,上記の反復プロセスを適用してから得られた最大の連結成分に対して再度縮約アルゴリズムを反復する.\\
+このようにして,与えられたグラフが小さいセパレータを含んでいれば,小さいセパレータを見つけるためのほぼ線形の実行時間を得る.\par
 
 上記のプロセスをまとめると,ある値$\frac{2}{3} \leq \alpha <$と$0 < \varepsilon <1-\alpha$について以下の結果が示される.\\
-グラフ$G=(V,E),|V| = n,|E| = m$について,$G$がサイズ$K$の$\alpha$-平衡分離集合を持つとき,アルゴリズムはサイズ$O(\varepsilon^{-1} K^2 \log^{1+o(1)}n)$の$(\alpha + \varepsilon)$-平衡分離集合を高確率で$O(\varepsilon^{-1}K^3m\log^{2+o(1)}n)$時間で見つけることができる.
+グラフ$G=(V,E),n \in V,m \in E$について,$G$がサイズ$K$の$\alpha$-セパレータを含んでいるとき,アルゴリズムはサイズ$O(\varepsilon^{-1} K^2 \log^{1+o(1)}n)$の$(\alpha + \varepsilon)$-セパレータを高確率で$O(\varepsilon^{-1}K^3m\log^{2+o(1)}n)$時間で見つけることができる.
 
 \chapter{分散実装}
 この章では,セパレータを近似するための分散アルゴリズムを提示する.
@@ -244,7 +212,7 @@ s-t点素パスは計算済みであり,点素パスの最大本数$k$とする.
 まず系\ref{path}を使用して最大本数$k$本のs-t点素パス集合$\{f_1, \dots f_k\}$を求める.求めた点素パス上の各ノードは,以下に示す補題によりパス上での順序に関するインデックスや前後方の収集値を$O(\log n)$SAラウンドで知ることができる.
 
 \begin{lemma}[経路収集\cite{li2018distributed}]
-    $G$の有向パス$P = \{v_1,...,v_\ell\}$を考える.ここで,各ノード$v_i$はそのパスの前方ノードと後方ノードを知っている.$O(\log n)$SAラウンドにおいて,各ノード$v_i$は$i$の値と経路内のそのインデックスを知ることができる.さらに,各ノード$v_i$は整数$x_i$と共通の二項演算子$\oplus$に対して,各ノード$v_i$に前方側収集$\bigoplus_{j\leq i}xj$と後方側収集$\bigoplus_{j\geq i}x_j$を学習させることができる.
+    $G$の有向パス$P = \{v_1,...,v_\ell\}$を考える.ここで、各ノード$v_i$はそのパスの前方ノードと後方ノードを知っている.$O(\log n)$SAラウンドにおいて,各ノード$v_i$は$i$の値と経路内のそのインデックスを知ることができる.さらに,各ノード$v_i$が整数$x_i$と共通の結合演算子$\oplus$を知っていれば、各ノード$v_i$に先頭集約$\bigoplus_{j\leq i}xj$と後尾集約$\bigoplus_{j\geq i}x_j$を学習させることができる.
   \end{lemma}
 
 次に,最良のカット候補である$S,T$を二分探索によって求める.$g(s),g(t)$を,縮約する集合の要素数とする.以下に\cite{brandt2017approximating}の探索アルゴリズムを提示する.
@@ -322,23 +290,23 @@ s-t点素パスは計算済みであり,点素パスの最大本数$k$とする.
 それぞれのwhileの反復は,$f_i$を二分探索する反復なので$O(\log n)$回で終了する.前節で示した$U^+,U^-$の結果と合わせて,$S,T$はそれぞれ$O(\ell k^2 \log n)$SAラウンドで計算できる.\par
 カット$S,T$に対し,$M_s = V_s(S) \cup S,M_t = V_t(W) \cup W$とする.$V_s(S),V_t(T)$は$U^+,U^-$の計算時に同時に求めてある.$M_s \cap M_t \neq \emptyset $または$M_s,M_t$間に辺がある時,結果をこの時の$S,T$として縮約アルゴリズムは終了する.この判定は$S,T$の各ノードが隣接ノードに各集合のIDをブロードキャストすることで判定できる.\\
 そうでなければ,$M_s,M_t$をそれぞれ単一のノード$s,t$に縮約したとみなして反復を繰り返す.これは,系\ref{A-Bpath}によって$M_s,M_t$間の点素パスを求めることが可能であるため,問題なく実行することができる.\par
-縮約アルゴリズムは,最大$K$回反復するので,アルゴリズムは$\tilde{O}(K^2(K^{O(1))}+\ell)$SAラウンドで終了する.
+縮約アルゴリズムは,最大$K$回反復するので,アルゴリズムは$\tilde{O}(K^2(K^{O(1))}+\ell)(\sqrt{n}+D)$ラウンドで終了する.
 
 
 \section{近似アルゴリズム}
-これまでのアルゴリズムを適用して平衡分離集合を近似する分散アルゴリズムを提示する.このアルゴリズムは,縮約アルゴリズムを適用して得られたカットによってグラフ$G$を分割し,分割後の各連結成分の中で一番ノード数が多い連結成分を$H$として縮約アルゴリズムを繰り返し適用する.縮約アルゴリズムによって得られたカットによってグラフが充分に小さくなったとき, 反復は終了する.反復終了後,各反復で得られたカットと$s,t$の和集合が求めたい近似平衡分離集合となる.\par
-まず,$\frac{2}{3} \leq \alpha < 1,0 < \varepsilon < 1-\alpha$とし,$G$にサイズ$K$の$\alpha$-平衡分離集合が存在すると仮定する.初期インスタンス$H:=G,S':= \{\}$とする.$S'$が最終的に求める近似平衡分離集合となる.\\
+これまでのアルゴリズムを適用してセパレータ近似アルゴリズムを提示する.このアルゴリズムは,縮約アルゴリズムを適用して得られたカットによってグラフ$G$を分割し,分割後の各連結成分の中で一番ノード数が多い連結成分を$H$として縮約アルゴリズムを繰り返し適用する.縮約アルゴリズムによって得られたカットについてバランスが取れているとき, 反復は終了する.反復終了後,各反復で得られたカットと$s,t$の和集合が求めたい近似セパレータとなる.\par
+まず,$\frac{2}{3} \leq \alpha < 1,0 < \varepsilon < 1-\alpha$とし,$G$にサイズ$K$の$\alpha$-セパレータが存在すると仮定する.初期インスタンス$H:=G,S':= \{\}$とする.$S'$が最終的に求める近似セパレータ集合となる.\\
 $|V(H)|\leq (\alpha + \varepsilon)|V|$の時,反復は終了する.各反復において2つのノード$s,t \in V$を一様ランダムに選択する.\\
 選択された$s,t$が隣接しているかまたは$s = t$の時,$H[V(H) \backslash (\{s\} \cup \{t\})]$にあるノード数が一番多い連結成分$C$を計算する.$s,t$が各連結成分のノード数はSAラウンドでそれぞれ計算可能.得られた$C$を$H$として反復を繰り返す.\\
 $s,t$が離れているとき,入力を$(H,K,s,t)$として縮約アルゴリズムを実行,得られたカットを$(S,T)$とする.
 $H[V(H) \backslash (S \cup T \cup \{s\} \cup \{t\})]$にある頂点数が一番多い連結成分$C$を計算する.各連結成分の頂点数はSAラウンドでそれぞれ計算可能.得られた$C$を$H$として反復を繰り返す.\par
-以上の操作により,求めたい平衡分離集合が構成できた.
+以上の操作により,求めたいセパレータが構成できた.
 
 \section{アルゴリズムの評価}
-近似アルゴリズムは,$s,t$を一様ランダムに選択して動作する,ラスベガス法による乱拓アルゴリズムである.\cite{brandt2017approximating}の補題28より,アルゴリズムは高確率で$O(\varepsilon^{-1}K\log^{1+o(1)}n)$回の反復で終了する.各反復において,$S'$のサイズは最大$2K+2$増える.これは,縮約アルゴリズムの結果$(S,T)$とノード$s,t$の個数を意味する.従って,アルゴリズムはサイズ$O(\varepsilon^{-1}K^2\log^{1+o(1)}n)$の$(\alpha + \varepsilon)$-平衡分離集合を$\tilde{O}(\varepsilon^{-1}K^3(K^{O(1)}+\ell)$SAラウンドで計算できる.
+近似アルゴリズムは,$s,t$を一様ランダムに選択して動作する,ラスベガス法による乱拓アルゴリズムである.\cite{brandt2017approximating}の補題28より,アルゴリズムは高確率で$O(\varepsilon^{-1}K\log^{1+o(1)}n)$回の反復で終了する.各反復において,$S'$のサイズは最大$2K+2$増える.これは,縮約アルゴリズムの結果$(S,T)$とノード$s,t$の個数を意味する.従って,アルゴリズムはサイズ$O(\varepsilon^{-1}K^2\log^{1+o(1)}n)$の$(\alpha + \varepsilon)$セパレータを$\tilde{O}(\varepsilon^{-1}K^3(K^{O(1)}+\ell)(\sqrt{n}+D))$ラウンドで計算できる.
 
 \chapter{研究のまとめ}
-本研究では,SAを使用して,サイズ$O(\varepsilon^{-1}K^2\log^{1+o(1)}n)$の$(\alpha + \varepsilon)$-平衡分離集合を高確率で$\tilde{O}(\varepsilon^{-1}K^3(K^{O(1)}+\ell)$SAラウンドで求めることができた.
+本研究では,Subgraph Aggregationタスクを使用して,s-t点素パスを計算分散アルゴリズムを計算するアルゴリズムを繰り返し適用してバランスの取れたカットを探索することによって,サイズ$O(\varepsilon^{-1}K^2\log^{1+o(1)}n)$の$(\alpha + \varepsilon)$セパレータを高確率で$\tilde{O}(\varepsilon^{-1}K^3(K^{O(1)}+\ell)(\sqrt{n}+D))$ラウンドで求めることができた.
 
 \chapter{謝辞}
 本研究の機会を与え，数々の御指導を賜りました泉泰介准教授に深く感謝致します．また，本研究を進めるにあたり多くの助言を頂き，様々な御協力を頂きました泉研究室の学生のみなさんに深く感謝致します．
