--- a/abst/mizutani_abst.tex
+++ b/abst/mizutani_abst.tex
@@ -45,17 +45,19 @@
 %%%%%%% ここからアブスト本体 %%%%%%%
 
 \section{はじめに}
-ある$n$頂点のグラフ$G=(V,E)$が与えられたとき,頂点の部分集合$S \subset V$が，それを取り除くとグラフが非連結な二つ以上の部分グラフに分けられるとき，その頂点集合$S$は$G$の分離集合と呼ぶ．特に，$S$を取り除いた後におけるグラフの各連結成分がいずれも高々$\alpha n$個の頂点しか含まないとき$S$をグラフ$G$の$\alpha$-平衡分離集合と呼ぶ．$\alpha$が定数（$\alpha = \Theta(1)$）であるようなサイズの小さい分離集合を発見できるとき，元のグラフ$G$に対する何らかの問題を，分離後の$\alpha n$頂点サイズのグラフにおける問題に分割統治法を用いて帰着できる場合がしばしば存在する．一般のグラフに対して，最小サイズの$\alpha$-平衡分離集合を求める問題はNP困難であることが知られているが~\cite{bui1992finding}，いくつかの近似アルゴリズムの存在が知られている．本研究では，特に分散システム上の平衡分離集合発見問題を考える．すなわち，ネットワークのトポロジを問題の入力とみなし，その上での小さい平衡分離集合を発見するアルゴリズムを考える．分散システムのモデルとしては，単位時間当たりに1通信リンクあたりに伝送可能な情報量を$O(\log n)$ビットに制限した\textit{CONGEST}モデルを考える．本研究での提案アルゴリズムの基本アイデアは，BrandtとWattenhoferらによる，一般のグラフに対する平衡分離集合計算のための近似アルゴリズム\cite{brandt2017approximating}を分散システム上に実現することである．同アルゴリズムはサイズ$K$の$\alpha$-平衡分離集合を持つような入力インスタンスに対して，サイズ$O(\varepsilon^{-1}K^2\log^{1+o(1)}n)$の $(\alpha + \varepsilon)$-平衡分離集合を計算する．提案アルゴリズムは，このアルゴリズムと同等の近似性能を持つ解を$\tilde{O}(\varepsilon^{-1}K^3(K^{O(1)}+\ell)(\sqrt{n}+D))$ラウンドで出力する.
+ある$n$頂点のグラフ$G=(V,E)$が与えられたとき,頂点の部分集合$S \subset V$が,それを取り除くとグラフが非連結な二つ以上の部分グラフに分けられるとき,その頂点集合$S$は$G$の分離集合と呼ぶ.特に,$S$を取り除いた後におけるグラフの各連結成分がいずれも高々$\alpha n$個の頂点しか含まないとき$S$をグラフ$G$の$\alpha$-平衡分離集合と呼ぶ.一般のグラフに対して,最小サイズの$\alpha$-平衡分離集合を求める問題はNP困難であることが知られているが~\cite{bui1992finding}，いくつかの近似アルゴリズムの存在が知られている.本研究では,特に分散システム上の平衡分離集合発見問題を考える.すなわち，ネットワークのトポロジを問題の入力とみなし,その上での小さい平衡分離集合を発見するアルゴリズムを考える.分散システムのモデルとして,\textit{CONGEST}モデルを考える.本研究での提案アルゴリズムの基本アイデアは,BrandtとWattenhoferらによる,一般のグラフに対する平衡分離集合計算のための近似アルゴリズム\cite{brandt2017approximating}を分散システム上に実現することである．
 
 \section{諸定義}
-
+ここで考える分散システム(\textit{CONGEST}モデル)は,単純無向連結グラフ$G=(V,E)$により表現される.ここで$V$はノードの集合であり,$E$は通信リンクの集合である．また,$|V|=n$とする．\textit{CONGEST}モデルでは計算機はラウンドに従って同期して動作するものとする．1ラウンド内で,隣接頂点へのメッセージ送信,隣接頂点からのメッセージ受信,内部計算(多項式時間)をおこなう．各辺は単位ラウンドあたり$O(\log n)$ビットを双方向に伝送可能であり,各ノードは異なる接続辺に異なる内容のメッセージを同一ラウンドに送信可能である．各ノードはまた,$O(\log n)$ビットの自然数値よるIDが付与されており,自身の隣接頂点全てのIDを既知であるとする.各ノードはグラフのトポロジに関する事前知識を持たないものとする.なお,$G$の直径を$D$で表すこととする.\par
+本研究で検討される分散アルゴリズムの動作は，同時部分収集問題(Subgraph Aggregation: SA)と呼ばれる抽象化された集合通信操作をプリミティブとして設計されている．同時部分収集問題はGhaffariとHaeuplerらによる低競合ショートカット\cite{ghaffari2016distributed}の枠組みにおいて初めて提案されている.
+本稿を通じて，分散アルゴリズムの実行時間評価を，そのアルゴリズムが駆動するSAの回数(SAラウンド)により評価することとする．SAの1回の実行に必要な(通常の意味での)ラウンド数は一般のグラフに関しては$O(\sqrt{n} + D)$ラウンドであり，この実行時間はタイトである．
 \section{提案アルゴリズム}
-
+$\frac{2}{3} \leq \alpha < 1$の時,$s$と$t$を分割するサイズ$K$の$\alpha$-平衡分離集合の存在を考える.アルゴリズムは,$s$と$t$を一様ランダムに選択して$s$-$t$点素パスの最大本数の集合を計算することから始める.$s$-$t$点素パスの計算は,既存研究で示されているアルゴリズム\cite{li2018distributed}を利用して$\tilde{O}(k^{O(1)})$SAラウンドで計算できる.二分探索法を用いて,$s$-$t$点カットの中で最良の平衡分離集合の候補である2つのカットを決定する.このカットの計算は,点素パス集合の中で最大の長さを$\ell$とすると,$O(k\ell)$SAラウンドで計算できる.これら2つのカットのうちの1つが元のグラフに対しても十分に平衡であれば,目的の小さい平衡分離集合が発見できたことになる.そうでないとき,連結成分が2つの$s$-$t$点カットで分断されているされていると見なす.そして,$s$を含む連結成分を新たな頂点$s'$に,$t$を含む成分を新たな頂点$t'$に縮約する.新しく得られたグラフのすべての$s'$-$t'$点カットも$G$の$s$-$t$カットであり,さらに上記の2つの$s$-$t$カットよりも平衡であることが示されている.そのため,本数が$K$に等しい$s$-$t$カットを得るまで$s$-$t$点カットをいくつか発見し,頂点集合を縮約する上記のプロセスを繰り返す.上述した反復プロセス終了時,少なくとも$\alpha$-平衡分離集合と同等であるカットを生じない場合,$\alpha$-平衡分離集合の少なくとも１つの頂点が実行された縮約のうちの１つに関与しているとみなす.したがって,プロセス全体を反復することによって,$\alpha$-平衡分離集合を探索する.全体の反復は,近似率($0 < \varepsilon < 1-\alpha$)とすると高確率で$O(\varepsilon^{-1}K\log^{1+o(1)}n)$終了する.
 \section{まとめ}
-
+サイズ$O(\varepsilon^{-1}K^2\log^{1+o(1)}n)$の$(\alpha + \varepsilon)$-平衡分離集合を高確率で$\tilde{O}(\varepsilon^{-1}K^3(K^{O(1)}+\ell)$SAラウンドで求めることができた.
+\bibliography{mizutani_references}
 
 %%%%%% 以下の行は消さないこと %%%%%%%
-
 \clearpage                       % この行を消すと最終ページの枠線消滅の危機
 \end{論文概要}                   % この行を消してはいけない
 \end{document}                   % この行を消してはいけない
