--- a/mizutani_soturon.tex
+++ b/mizutani_soturon.tex
@@ -336,7 +336,7 @@ $H[V(H) \backslash (S \cup T \cup \{s\} \cup \{t\})]$にある頂点数が一番
 近似アルゴリズムは,$s,t$を一様ランダムに選択して動作する,ラスベガス法による乱拓アルゴリズムである.\cite{brandt2017approximating}の補題28より,アルゴリズムは高確率で$O(\varepsilon^{-1}K\log^{1+o(1)}n)$回の反復で終了する.各反復において,$S'$のサイズは最大$2K+2$増える.これは,縮約アルゴリズムの結果$(S,T)$とノード$s,t$の個数を意味する.従って,アルゴリズムはサイズ$O(\varepsilon^{-1}K^2\log^{1+o(1)}n)$の$(\alpha + \varepsilon)$-平衡分離集合を$\tilde{O}(\varepsilon^{-1}K^3(K^{O(1)}+\ell)$SAラウンドで計算できる.
 
 \chapter{研究のまとめ}
-本研究では,SAを使用して,サイズ$O(\varepsilon^{-1}K^2\log^{1+o(1)}n)$の$(\alpha + \varepsilon)$-平衡分離集合を高確率で$\tilde{O}(\varepsilon^{-1}K^3(K^{O(1)}+\ell)$SAラウンドで求めることができた.
+本研究では,SAを使用して,サイズ$O(\varepsilon^{-1}K^2\log^{1+o(1)}n)$の$(\alpha + \varepsilon)$-平衡分離集合を高確率で$\tilde{O}(\varepsilon^{-1}K^3(K^{O(1)}+\ell))$SAラウンドで求めることができた.
 
 \chapter{謝辞}
 本研究の機会を与え，数々の御指導を賜りました泉泰介准教授に深く感謝致します．また，本研究を進めるにあたり多くの助言を頂き，様々な御協力を頂きました泉研究室の学生のみなさんに深く感謝致します．
