--- a/abst/mizutani_abst.tex
+++ b/abst/mizutani_abst.tex
@@ -52,7 +52,7 @@
 本研究で検討される分散アルゴリズムの動作は，同時部分収集問題(Subgraph Aggregation: SA)と呼ばれる抽象化された集合通信操作をプリミティブとして設計されている．同時部分収集問題はGhaffariとHaeuplerらによる低競合ショートカット\cite{ghaffari2016distributed}の枠組みにおいて初めて提案されている.
 本稿を通じて，分散アルゴリズムの実行時間評価を，そのアルゴリズムが駆動するSAの回数(SAラウンド)により評価することとする．SAの1回の実行に必要な(通常の意味での)ラウンド数は一般のグラフに関しては$O(\sqrt{n} + D)$ラウンドであり，この実行時間はタイトである．
 \section{提案アルゴリズム}
-$\frac{2}{3} \leq \alpha < 1$の時,$s$と$t$を分割するサイズ$K$の$\alpha$-平衡分離集合の存在を考える.アルゴリズムは,$s$と$t$を一様ランダムに選択して$s$-$t$点素パスの最大本数の集合を計算することから始める.$s$-$t$点素パスの計算は,既存研究で示されているアルゴリズム\cite{li2018distributed}を利用して$\tilde{O}(k^{O(1)})$SAラウンドで計算できる.二分探索法を用いて,$s$-$t$点カットの中で最良の平衡分離集合の候補である2つのカットを決定する.このカットの計算は,点素パス集合の中で最大の長さを$\ell$とすると,$O(k\ell)$SAラウンドで計算できる.これら2つのカットのうちの1つが元のグラフに対しても十分に平衡であれば,目的の小さい平衡分離集合が発見できたことになる.そうでないとき,連結成分が2つの$s$-$t$点カットで分断されているされていると見なす.そして,$s$を含む連結成分を新たな頂点$s'$に,$t$を含む成分を新たな頂点$t'$に縮約する.新しく得られたグラフのすべての$s'$-$t'$点カットも$G$の$s$-$t$カットであり,さらに上記の2つの$s$-$t$カットよりも平衡であることが示されている.そのため,本数が$K$に等しい$s$-$t$カットを得るまで$s$-$t$点カットをいくつか発見し,頂点集合を縮約する上記のプロセスを繰り返す.上述した反復プロセス終了時,少なくとも$\alpha$-平衡分離集合と同等であるカットを生じない場合,$\alpha$-平衡分離集合の少なくとも１つの頂点が実行された縮約のうちの１つに関与しているとみなす.したがって,プロセス全体を反復することによって,$\alpha$-平衡分離集合を探索する.全体の反復は,近似率($0 < \varepsilon < 1-\alpha$)とすると高確率で$O(\varepsilon^{-1}K\log^{1+o(1)}n)$終了する.
+$\frac{2}{3} \leq \alpha < 1$の時,$s$と$t$を分割するサイズ$K$の$\alpha$-平衡分離集合の存在を考える.アルゴリズムは,$s$と$t$を一様ランダムに選択して$s$-$t$点素パスの最大本数の集合を計算することから始める.$s$-$t$点素パスの計算は,既存研究で示されているアルゴリズム\cite{li2018distributed}を利用して$\tilde{O}(k^{O(1)})$SAラウンドで計算できる.二分探索法を用いて,$s$-$t$点カットの中で最良の平衡分離集合の候補である2つのカットを決定する.このカットの計算は,点素パス集合の中で最大の長さを$\ell$とすると,$\tilde{O}(k\ell)$SAラウンドで計算できる.これら2つのカットのうちの1つが元のグラフに対しても十分に平衡であれば,目的の小さい平衡分離集合が発見できたことになる.そうでないとき,連結成分が2つの$s$-$t$点カットで分断されているされていると見なす.そして,$s$を含む連結成分を新たな頂点$s'$に,$t$を含む成分を新たな頂点$t'$に縮約する.新しく得られたグラフのすべての$s'$-$t'$点カットも$G$の$s$-$t$カットであり,さらに上記の2つの$s$-$t$カットよりも平衡であることが示されている.そのため,本数$K$の$s$-$t$点素パスを得るまで,$s$-$t$点カットをいくつか発見して頂点集合を縮約する上記のプロセスを繰り返す.上述した反復プロセス終了時,少なくとも$\alpha$-平衡分離集合と同等であるカットを生じない場合,$\alpha$-平衡分離集合の少なくとも１つの頂点が実行された縮約のうちの１つに関与しているとみなす.したがって,プロセス全体を反復することによって,$\alpha$-平衡分離集合を探索する.全体の反復は,近似率($0 < \varepsilon < 1-\alpha$)とすると高確率で$O(\varepsilon^{-1}K\log^{1+o(1)}n)$終了する.
 \section{まとめ}
 サイズ$O(\varepsilon^{-1}K^2\log^{1+o(1)}n)$の$(\alpha + \varepsilon)$-平衡分離集合を高確率で$\tilde{O}(\varepsilon^{-1}K^3(K^{O(1)}+\ell))$SAラウンドで求めることができた.
 \bibliography{mizutani_references}
