--- a/abst/mizutani_abst.tex
+++ b/abst/mizutani_abst.tex
@@ -36,7 +36,7 @@
 %\英語氏名{} %未使用
 \研究室{泉}
 \系{ネットワーク} % 学生が所属する系を記入．教員(研究室)の所属する系ではない
-\題目{平面的グラフに対する直径を計算する分散アルゴリズム} % 途中で改行 "\\" を挿入可
+\題目{平衡分離集合を近似する分散アルゴリズム} % 途中で改行 "\\" を挿入可
 \年度{30} % !=年 発表は2月です
 \begin{document}              % この行を消してはいけない
 \twocolumn[\vspace*{9mm}]     % この行を消してはいけない
