--- a/mizutani_references.bib
+++ b/mizutani_references.bib
@@ -42,3 +42,21 @@
   year={1992},
   publisher={Elsevier}
 }
+
+@inproceedings{haeupler2016near,
+  title={Near-optimal low-congestion shortcuts on bounded parameter graphs},
+  author={Haeupler, Bernhard and Izumi, Taisuke and Zuzic, Goran},
+  booktitle={International Symposium on Distributed Computing},
+  pages={158--172},
+  year={2016},
+  organization={Springer}
+}
+@article{北川大貴2019k,
+  title={k-コーダルグラフにおける最適な低競合ショートカット},
+  author={北川大貴 and 北村直暉 and 大館陽太 and 泉泰介 and others},
+  journal={研究報告アルゴリズム (AL)},
+  volume={2019},
+  number={11},
+  pages={1--7},
+  year={2019}
+}
