--- a/mizutani_soturon.tex
+++ b/mizutani_soturon.tex
@@ -318,7 +318,13 @@ s-t点素パスは計算済みであり,点素パスの最大本数$k$とする.
 
 それぞれのwhileの反復は,$f_i$を二分探索する反復なので$O(\log n)$回で終了する.前節で示した$U^+,U^-$の結果と合わせて,$S,T$はそれぞれ$O(\ell k^2 \log n)$SAラウンドで計算できる.\par
 カット$S,T$に対し,$M_s = V_s(S) \cup S,M_t = V_t(W) \cup W$とする.$V_s(S),V_t(T)$は$U^+,U^-$の計算時に同時に求めてある.$M_s \cap M_t \neq \emptyset $または$M_s,M_t$間に辺がある時,結果をこの時の$S,T$として縮約アルゴリズムは終了する.この判定は$S,T$の各ノードが隣接ノードに各集合のIDをブロードキャストすることで判定できる.\\
-そうでなければ,$M_s,M_t$をそれぞれ単一のノード$s,t$に縮約したとみなして反復を繰り返す.\par
+そうでなければ,$M_s,M_t$をそれぞれ単一のノード$s,t$に縮約したとみなして反復を繰り返す.これは,以下の系によって$M_s,M_t$間の点素パスを求めることが可能であるため,問題なく実行することができる.
+
+  \begin{corollary}[\cite{li2018distributed}] 
+    ネットワーク$G=(V,E)$中で$G[U]$が連結であるような集合$U \subseteq V$と3つの互いに素な頂点集合$A,B \subseteq V - U$,$X \subseteq U$，および自然数$k$に対して，
+    内部ノードが$G[U] - X$に属する$k$個の$A$-$B$点素パス，あるいはサイズ$k$未満の$A$-$B$点カットを$\tilde{O}(k^{O(1)})$SAラウンドで出力する\textit{CONGEST}モデルの分散アルゴリズムが存在する.このアルゴリズムは各ノードに，自身が点素パスにあるいは点カットに含まれるかどうかを出力する．また，点素パスが出力される場合，自身を含むパスにおける自身の直前，直後のノードについての情報も併せて出力する．
+\end{corollary}
+\par
 縮約アルゴリズムは,最大$K$回反復するので,アルゴリズムは$\tilde{O}(K^2(K^{O(1))}+\ell)$SAラウンドで終了する.
 
 
